--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.1.4</version>
+        <version>3.1.5</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.polarbookshop</groupId>
@@ -16,6 +16,12 @@
     <properties>
         <java.version>17</java.version>
         <spring-cloud.version>2022.0.4</spring-cloud.version>
+
+        <!-- Docker image settings -->
+        <docker.registry>ghcr.io</docker.registry>
+        <docker.user>cortizqgithub</docker.user>
+        <docker.image.name>${docker.registry}/${docker.user}/${project.name}:${project.version}</docker.image.name>
+        <!-- END Docker image settings -->
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -63,6 +69,12 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <image>
+                        <name>${docker.image.name}</name>
+                        <builder>paketobuildpacks/builder-jammy-tiny:latest</builder>
+                    </image>
+                </configuration>
             </plugin>
         </plugins>
     </build>
